--- a/TPC7/dawApp/views/editar.pug
+++ b/TPC7/dawApp/views/editar.pug
@@ -10,7 +10,7 @@ block content
         .w3-text-teal
           label Numero de aluno
           .w3-input.w3-border.w3-light-grey
-            input(type="text", name="numero", value=student.numero)
+            input(type="", name="numero", value=student.numero, readonly="readonly")
         .w3-text-teal
           label Nome
           .w3-input.w3-border.w3-light-grey
